# kong-auth

./: .dockerignore  .gitignore  .gitlab-ci-bk.yml  .gitlab-ci.yml  .gitlab-ci.yml-old  DOCKER.md  Dockerfile  Dockerfile.Deploy  Dockerfile.auth  Dockerfile.auth.dev  Dockerfile.sample  Dockerfile.sample.dev  Dockerfile.setup  JWT_TOKEN_FIX.md  KONG_JWT_CONFIG.md  Makefile  PROJECT_STRUCTURE.md  README-Docker.md  README.md  REFACTORING_SUMMARY.md  SENTRY_SETUP.md  build-docs.sh  config.env.example  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  example_kong_api_usage.py  example_usage.py  pyproject.toml  requirements.txt  run.py  test_api.py  test_kong_api.py
app/: casdoor_auth.py  casdoor_oidc.py  config.py  errors.py  kong_api.py  kong_manager.py  logging_config.py  main.py  token_utils.py
app/metrics/: __init__.py  base.py  middleware.py  routers.py
docs/: CASDOOR_AUTH_README.md  Makefile  OIDC_IMPLEMENTATION_GUIDE.md  README.md  api-examples.md  kong-management-api.md  requirements.txt
kong/: docker-compose.kong.yml  kong-dashboard.yml
kong-setup/: README.md  sample-service.py  setup-kong.py  start-all.py  test-complete-flow.py
tests/: COMPREHENSIVE_TEST_GUIDE.md  README.md  conftest.py  run_tests.py  test_api.py  test_casdoor_auth.py  test_casdoor_oidc_comprehensive.py  test_ci.py  test_kong_api.py  test_kong_service_comprehensive.py  test_main_unit.py  test_middleware_comprehensive.py  test_oidc_loading.py  test_token_service_comprehensive.py  test_views_comprehensive.py  verify_casdoor_setup.py
(+31 files in other folders)
